--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -3,12 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DataFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/data_image"
+            android:layout_width="286dp"
+            android:layout_height="328dp"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/data_text"
+            android:layout_width="292dp"
+            android:layout_height="182dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center|top" />
+
+        <Button
+            android:id="@+id/button_to_main_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="90dp"
+            android:text="@string/back" />
+    </LinearLayout>
 
 </FrameLayout>
