--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".DataFragment">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/data_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
+        android:layout_marginTop="10dp" />
 
-        <ImageView
-            android:id="@+id/data_image"
-            android:layout_width="286dp"
-            android:layout_height="328dp"
-            android:layout_marginTop="10dp" />
+    <TextView
+        android:id="@+id/data_text"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="10dp"
+        android:gravity="center|top" />
 
-        <TextView
-            android:id="@+id/data_text"
-            android:layout_width="292dp"
-            android:layout_height="182dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center|top" />
-
-        <Button
-            android:id="@+id/button_to_main_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="90dp"
-            android:text="@string/back" />
-    </LinearLayout>
-
-</FrameLayout>
+    <Button
+        android:id="@+id/button_to_main_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/back" />
+</LinearLayout>
